k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: site
spec:
  selector:
    app: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
